--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ set(GraphMLIR_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(GraphMLIR_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(GraphMLIR_EXAMPLES_DIR ${GraphMLIR_SOURCE_DIR}/examples)
 set(GraphMLIR_INCLUDE_DIR ${GraphMLIR_SOURCE_DIR}/include/)
-set(GraphMLIR_SOURCE_DIR ${GraphMLIR_SOURCE_DIR}/lib)
+
 
 set(GraphMLIR_OPT_ATTR avx2 CACHE STRING "Target Architecture.")
 set(GraphMLIR_OPT_TRIPLE x86_64-unknown-linux-gnu CACHE STRING "Target Triple.")
@@ -71,6 +71,7 @@ include_directories(${GraphMLIR_MAIN_INCLUDE_DIR})
 include_directories(${GraphMLIR_INCLUDE_DIR})
 include_directories(${GraphMLIR_INCLUDE_DIR}/Dialect)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/Dialect)
+include_directories(${GraphMLIR_SOURCE_DIR}/lib)
 
 #-------------------------------------------------------------------------------
 # Directory setup
