First draft of interface
* Frontend: Graph accepting adjacency list.

Added the forntend where edges are added in the adjacency list type
of graph implementation.

Signed-off-by: Rishikesh Donadkar <rishikeshdonadkar@gmail.com>

* Frontend: Graph accepting adjacency list.

Added the forntend where edges are added in the adjacency list type
of graph implementation.

Signed-off-by: Rishikesh Donadkar <rishikeshdonadkar@gmail.com>

* added additional function to print adjList

* Sarrah+Rishi final code working

* Added all 4 cases of incidence matrix

* clang format and adj mat

* doxygen docs

* removed redundancy in using memref_descriptor

* Docs generated and relevant instructions added

* clean up of docs

* Added Graph Container

* Finished formatting the code

Spaces were added after the // in the comments, and incorrect formatting was fixed.

* Added documentation for new code

* Added documentation

* Remove redundant doxygen related file

* Improved Container interface.

* Added Description of a constructor

* Trivial changes

Trivial changes

Signed-off-by: Rishikesh Donadkar <rishikeshdonadkar@gmail.com>
Co-authored-by: Rishikesh Donadkar <rishikeshdonadkar@gmail.com>
Co-authored-by: Sarrah Bastawala <sarrah.basta@gmail.com>
Co-authored-by: Sarrah Bastawala <84874044+sarrah-basta@users.noreply.github.com>
Co-authored-by: rishabh <rishabhsbali@gmail.com>
Co-authored-by: Rishabh Bali <81592570+Ris-Bali@users.noreply.github.com>
Co-authored-by: meshtag <prathameshtagore@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,8 +68,10 @@ include_directories(${MLIR_INCLUDE_DIRS})
 # Add GraphMLIR files to the include path
 include_directories(${GraphMLIR_MAIN_INCLUDE_DIR})
 include_directories(${GraphMLIR_INCLUDE_DIR})
+include_directories(${GraphMLIR_INCLUDE_DIR}/Interface)
 include_directories(${GraphMLIR_INCLUDE_DIR}/Dialect)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/Dialect)
+include_directories(${GraphMLIR_SOURCE_DIR}/lib)
 
 #-------------------------------------------------------------------------------
 # Directory setup
