--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,10 +1,15 @@
 add_custom_command(OUTPUT graph.o
 COMMAND ${GraphMLIR_BINARY_DIR}/graph-opt ${GraphMLIR_EXAMPLES_DIR}/graph.mlir 
         -lower-graph -lower-affine -convert-scf-to-cf 
-        -convert-vector-to-llvm -convert-memref-to-llvm 
-        -convert-func-to-llvm='emit-c-wrappers=1' 
-        -reconcile-unrealized-casts | 
-        ${LLVM_MLIR_BINARY_DIR}/mlir-translate --mlir-to-llvmir |
+        -test-vector-multi-reduction-lowering-patterns 
+        -convert-vector-to-llvm 
+        -convert-memref-to-llvm
+        -llvm-request-c-wrappers
+        -convert-func-to-llvm
+        -reconcile-unrealized-casts 
+        | 
+        ${LLVM_MLIR_BINARY_DIR}/mlir-translate --mlir-to-llvmir 
+        |
         ${LLVM_MLIR_BINARY_DIR}/llc -mtriple=${GraphMLIR_OPT_TRIPLE} -mattr=${GraphMLIR_OPT_ATTR} 
         --filetype=obj -o ${GraphMLIR_BINARY_DIR}/../examples/graph.o
 DEPENDS graph-opt)
