[Graph] [Benchmark]: Floyd Warshall Lowering pass with C++ interface and end to end example, along with benchmarking support (#22)
Co-authored-by: Gautam Agrawal <gautamnagrawal@gmail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,18 +1,30 @@
-add_custom_command(OUTPUT bfs.o
-COMMAND ${GraphMLIR_BINARY_DIR}/graph-opt ${GraphMLIR_EXAMPLES_DIR}/bfs.mlir -lower-graph -lower-affine -convert-scf-to-cf -convert-vector-to-llvm -convert-memref-to-llvm -convert-func-to-llvm='emit-c-wrappers=1' -reconcile-unrealized-casts | 
-        ${LLVM_MLIR_BINARY_DIR}/mlir-translate --mlir-to-llvmir |
-        ${LLVM_MLIR_BINARY_DIR}/llc -mtriple=${GraphMLIR_OPT_TRIPLE} -mattr=${GraphMLIR_OPT_ATTR} --filetype=obj -o ${GraphMLIR_BINARY_DIR}/../examples/bfs.o
+add_custom_command(OUTPUT graph.o
+COMMAND ${GraphMLIR_BINARY_DIR}/graph-opt ${GraphMLIR_EXAMPLES_DIR}/graph.mlir 
+        -lower-graph -lower-affine -convert-scf-to-cf 
+        -test-vector-multi-reduction-lowering-patterns 
+        -convert-vector-to-llvm 
+        -convert-memref-to-llvm
+        -llvm-request-c-wrappers
+        -convert-func-to-llvm
+        -reconcile-unrealized-casts 
+        | 
+        ${LLVM_MLIR_BINARY_DIR}/mlir-translate --mlir-to-llvmir 
+        |
+        ${LLVM_MLIR_BINARY_DIR}/llc -mtriple=${GraphMLIR_OPT_TRIPLE} -mattr=${GraphMLIR_OPT_ATTR} 
+        --filetype=obj -o ${GraphMLIR_BINARY_DIR}/../examples/graph.o
 DEPENDS graph-opt)
 
-add_library(BFS STATIC bfs.o)
+add_library(GRAPH STATIC graph.o)
 
 SET_TARGET_PROPERTIES(
-BFS
+GRAPH
 PROPERTIES
 LINKER_LANGUAGE C)
 
-
-
 add_executable(bfsExample bfsExample.cpp)
 add_dependencies(bfsExample graph-opt)
-target_link_libraries(bfsExample BFS)
+target_link_libraries(bfsExample GRAPH)
+
+add_executable(floydWarshallExample floydWarshallExample.cpp)
+add_dependencies(floydWarshallExample graph-opt)
+target_link_libraries(floydWarshallExample GRAPH)
