Add Boost benchmarking support for Bellman Ford

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -37,6 +37,7 @@ LINKER_LANGUAGE C)
 add_executable(graph-processing-benchmark
   FloydWarshall.cpp
   BoostFloydWarshall.cpp
+  BoostBellmanFordBenchmarking.cpp
   GraphMlirFloydWarshallBenchmark.cpp
   GraphMlirBellmanFordBenchmark.cpp
   LemonBFS.cpp
